2022-03-25 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asz80/z80mch.c:
	  Disable undocumented instructions for Z180.

2022-03-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/Makefile.in,
	  support/regression/generate-cases.py:
	  Regression test infrastructure improvements, picked from patch #430 by Felix Salfelder (felixs).

2022-03-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCast.c,
	  src/SDCCsymt.c,
	  support/regression/tests/widebitintbitfield.c:
	  _BitInt promotion fix.
	* src/SDCCicode.c:
	  support/regression/tests/gcc-torture-execute-920625-1.c,
	  support/regression/tests/bug-3368.c:
	  Fix bug #3368.
	* support/regression/tests/bug-3235.c:
	  Test for a bug that was fixd a while ago.

2022-03-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCast.c,
	  support/regression/tests/bug-3372.c:
	  Fix bug #3372.
	* src/SDCCsymt.c:
	  Improve debug output for bit-fields.

2022-03-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/as8xcxxx/ds8adr.c,
	  sdas/as8xcxxx/ds8mch.c:
	  Merge error messages from upstream ASxxxx 5.40.

2022-03-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/as8xcxxx/ds8pst.c,
	  sdas/aspdk13/pdk13pst.c,
	  sdas/aspdk14/pdk14pst.c,
	  sdas/aspdk15/pdk15pst.c,
	  sdas/aspdk16/pdk16pst.c,
	  sdas/asrab/rabpst.c,
	  sdas/asstm8/stm8pst.c,
	  sdas/astlcs90/t90pst.c,
	  sdas/asz80/z80pst.c:
	  Enable .incbin for all targets.

2022-03-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/widebitintbitfield.c:
	  Disable a test that had been accidentially enabled even for ports where the feature is not supported.

2022-03-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/as8051/i51adr.c,
	  sdas/as8051/i51mch.c,
	  sdas/as8051/i51pst.c:
	  Merge error messages from upstream ASxxxx 5.40.

2022-03-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asz80/z80.h: