@@ -328,6 +328,7 @@ struct options
     bool noOptsdccInAsm;        /* Do not emit .optsdcc in asm */
     bool oldralloc;             /* Use old register allocator */
     int sdcccall;               /* ABI version */
+    bool allow_undoc_inst;      /* Allow the use of undocumented instructions */
   };
 
 /* forward definition for variables accessed globally */
