@@ -30,22 +30,22 @@
 #include "SDCCargs.h"
 #include "dbuf_string.h"
 
-#define OPTION_BO              "-bo"
-#define OPTION_BA              "-ba"
-#define OPTION_CODE_SEG        "--codeseg"
-#define OPTION_CONST_SEG       "--constseg"
-#define OPTION_DATA_SEG        "--dataseg"
-#define OPTION_CALLEE_SAVES_BC "--callee-saves-bc"
-#define OPTION_PORTMODE        "--portmode="
-#define OPTION_ASM             "--asm="
-#define OPTION_NO_STD_CRT0     "--no-std-crt0"
-#define OPTION_RESERVE_IY      "--reserve-regs-iy"
-#define OPTION_OLDRALLOC       "--oldralloc"
-#define OPTION_FRAMEPOINTER    "--fno-omit-frame-pointer"
-#define OPTION_EMIT_EXTERNS    "--emit-externs"
-#define OPTION_LEGACY_BANKING  "--legacy-banking"
-#define OPTION_NMOS_Z80        "--nmos-z80"
-#define OPTION_SDCCCALL        "--sdcccall"
+#define OPTION_BO               "-bo"
+#define OPTION_BA               "-ba"
+#define OPTION_CODE_SEG         "--codeseg"
+#define OPTION_CONST_SEG        "--constseg"
+#define OPTION_DATA_SEG         "--dataseg"
+#define OPTION_CALLEE_SAVES_BC  "--callee-saves-bc"
+#define OPTION_PORTMODE         "--portmode="
+#define OPTION_ASM              "--asm="
+#define OPTION_NO_STD_CRT0      "--no-std-crt0"
+#define OPTION_RESERVE_IY       "--reserve-regs-iy"
+#define OPTION_FRAMEPOINTER     "--fno-omit-frame-pointer"
+#define OPTION_EMIT_EXTERNS     "--emit-externs"
+#define OPTION_LEGACY_BANKING   "--legacy-banking"
+#define OPTION_NMOS_Z80         "--nmos-z80"
+#define OPTION_SDCCCALL         "--sdcccall"
+#define OPTION_ALLOW_UNDOC_INST "--allow-undocumented-instructions"
 
 static char _z80_defaultRules[] = {
 #include "peeph.rul"
@@ -82,6 +82,25 @@ static char _z80n_defaultRules[] = {
 
 Z80_OPTS z80_opts;
 
+static OPTION _z80_like_options[] = {
+  {0, OPTION_CALLEE_SAVES_BC, &z80_opts.calleeSavesBC, "Force a called function to always save BC"},
+  {0, OPTION_PORTMODE,        NULL, "Determine PORT I/O mode (z80/z180)"},
+  {0, OPTION_BO,              NULL, "<num> use code bank <num>"},
+  {0, OPTION_BA,              NULL, "<num> use data bank <num>"},
+  {0, OPTION_ASM,             NULL, "Define assembler name (rgbds/asxxxx/isas/z80asm/gas)"},
+  {0, OPTION_CODE_SEG,        &options.code_seg, "<name> use this name for the code segment", CLAT_STRING},
+  {0, OPTION_CONST_SEG,       &options.const_seg, "<name> use this name for the const segment", CLAT_STRING},
+  {0, OPTION_DATA_SEG,        &options.data_seg, "<name> use this name for the data segment", CLAT_STRING},
+  {0, OPTION_NO_STD_CRT0,     &options.no_std_crt0, "Do not link default crt0.rel"},
+  {0, OPTION_RESERVE_IY,      &z80_opts.reserveIY, "Do not use IY (incompatible with --fomit-frame-pointer)"},
+  {0, OPTION_FRAMEPOINTER,    &z80_opts.noOmitFramePtr, "Do not omit frame pointer"},
+  {0, OPTION_EMIT_EXTERNS,    NULL, "Emit externs list in generated asm"},
+  {0, OPTION_LEGACY_BANKING,  &z80_opts.legacyBanking, "Use legacy method to call banked functions"},
+  {0, OPTION_NMOS_Z80,        &z80_opts.nmosZ80, "Generate workaround for NMOS Z80 when saving IFF2"},
+  {0, OPTION_SDCCCALL,        &options.sdcccall, "Set ABI version for default calling convention", CLAT_INTEGER},
+  {0, NULL}
+};
+
 static OPTION _z80_options[] = {
   {0, OPTION_CALLEE_SAVES_BC, &z80_opts.calleeSavesBC, "Force a called function to always save BC"},
   {0, OPTION_PORTMODE,        NULL, "Determine PORT I/O mode (z80/z180)"},
@@ -93,12 +112,12 @@ static OPTION _z80_options[] = {
   {0, OPTION_DATA_SEG,        &options.data_seg, "<name> use this name for the data segment", CLAT_STRING},
   {0, OPTION_NO_STD_CRT0,     &options.no_std_crt0, "Do not link default crt0.rel"},
   {0, OPTION_RESERVE_IY,      &z80_opts.reserveIY, "Do not use IY (incompatible with --fomit-frame-pointer)"},
-  {0, OPTION_OLDRALLOC,       &options.oldralloc, "Use old register allocator (deprecated)"},
   {0, OPTION_FRAMEPOINTER,    &z80_opts.noOmitFramePtr, "Do not omit frame pointer"},
   {0, OPTION_EMIT_EXTERNS,    NULL, "Emit externs list in generated asm"},
   {0, OPTION_LEGACY_BANKING,  &z80_opts.legacyBanking, "Use legacy method to call banked functions"},
   {0, OPTION_NMOS_Z80,        &z80_opts.nmosZ80, "Generate workaround for NMOS Z80 when saving IFF2"},
-  {0, OPTION_SDCCCALL,         &options.sdcccall, "Set ABI version for default calling convention", CLAT_INTEGER},
+  {0, OPTION_SDCCCALL,        &options.sdcccall, "Set ABI version for default calling convention", CLAT_INTEGER},
+  {0, OPTION_ALLOW_UNDOC_INST,&options.allow_undoc_inst, "Allow use of undocumented instructions"},
   {0, NULL}
 };
 
@@ -112,7 +131,7 @@ static OPTION _sm83_options[] = {
   {0, OPTION_DATA_SEG,        &options.data_seg, "<name> use this name for the data segment", CLAT_STRING},
   {0, OPTION_NO_STD_CRT0,     &options.no_std_crt0, "Do not link default crt0.rel"},
   {0, OPTION_LEGACY_BANKING,  &z80_opts.legacyBanking, "Use legacy method to call banked functions"},
-  {0, OPTION_SDCCCALL,         &options.sdcccall, "Set ABI version for default calling convention", CLAT_INTEGER},
+  {0, OPTION_SDCCCALL,        &options.sdcccall, "Set ABI version for default calling convention", CLAT_INTEGER},
   {0, NULL}
 };
 
@@ -703,11 +722,6 @@ _parseOptions (int *pargc, char **argv, int *i)
           port->assembler.externGlobal = 1;
           return true;
         }
-      else if (!strncmp (argv[*i], OPTION_OLDRALLOC, sizeof (OPTION_OLDRALLOC) - 1))
-        {
-          werror (W_DEPRECATED_OPTION, "--oldralloc");
-          return true;
-        }
     }
   return FALSE;
 }
@@ -797,10 +811,6 @@ _setValues (void)
   dbuf_printf (&dbuf, "-b_CODE=0x%04X -b_DATA=0x%04X", options.code_loc, options.data_loc);
   setMainValue ("z80bases", dbuf_c_str (&dbuf));
   dbuf_destroy (&dbuf);
-
-  /* For the old register allocator (with the new one we decide to omit the frame pointer for each function individually) */
-  if (!IS_SM83 && options.omitFramePtr)
-    port->stack.call_overhead = 2;
 }
 
 static void
@@ -840,6 +850,7 @@ _setDefaultOptions (void)
   options.noRegParams = 0;
   /* Default code and data locations. */
   options.code_loc = 0x200;
+  options.allow_undoc_inst = false;
 
   if (IS_SM83)
     options.data_loc = 0xc000;
@@ -1267,7 +1278,7 @@ PORT z180_port =
   "_",
   _z180_init,
   _parseOptions,
-  _z80_options,
+  _z80_like_options,
   NULL,
   _finaliseOptions,
   _setDefaultOptions,
@@ -1395,7 +1406,7 @@ PORT r2k_port =
   "_",
   _r2k_init,
   _parseOptions,
-  _z80_options,
+  _z80_like_options,
   NULL,
   _finaliseOptions,
   _setDefaultOptions,
@@ -1524,7 +1535,7 @@ PORT r2ka_port =
   "_",
   _r2ka_init,
   _parseOptions,
-  _z80_options,
+  _z80_like_options,
   NULL,
   _finaliseOptions,
   _setDefaultOptions,
@@ -1653,7 +1664,7 @@ PORT r3ka_port =
   "_",
   _r3ka_init,
   _parseOptions,
-  _z80_options,
+  _z80_like_options,
   NULL,
   _finaliseOptions,
   _setDefaultOptions,
@@ -1913,7 +1924,7 @@ PORT tlcs90_port =
   "_",
   _tlcs90_init,
   _parseOptions,
-  _z80_options,
+  _z80_like_options,
   NULL,
   _finaliseOptions,
   _setDefaultOptions,
@@ -2042,7 +2053,7 @@ PORT ez80_z80_port =
   "_",
   _ez80_z80_init,
   _parseOptions,
-  _z80_options,
+  _z80_like_options,
   NULL,
   _finaliseOptions,
   _setDefaultOptions,
@@ -2171,7 +2182,7 @@ PORT z80n_port =
   "_",
   _z80n_init,
   _parseOptions,
-  _z80_options,
+  _z80_like_options,
   NULL,
   _finaliseOptions,
   _setDefaultOptions,
