@@ -46,6 +46,7 @@ extern Z80_OPTS z80_opts;
 #define IS_TLCS90 (z80_opts.sub == SUB_TLCS90)
 #define IS_EZ80_Z80 (z80_opts.sub == SUB_EZ80_Z80)
 #define IS_Z80N (z80_opts.sub == SUB_Z80N)
+#define HAS_IYL_INST (IS_Z80N || IS_EZ80_Z80 || IS_Z80 && options.allow_undoc_inst)
 
 #define IY_RESERVED (z80_opts.reserveIY)
 
