@@ -1,3 +1,11 @@
+2022-03-25 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/SDCCglobl.h,
+	  src/SDCCglue.c,
+	  src/z80/main.c,
+	  src/z80/z80.h:
+	  Infrastructure for undocumented Z80 instructions.
+
 2022-03-25 Sebastian 'basxto' Riedel <sdcc@basxto.de>
 
 	* sdas/asz80/z80mch.c:
